<resources>
    <string-array name="fragments_array">
        <item>Watchlist</item>
        <item>About</item>
        <item>Delete users</item>
        <item>Admin bridges</item>
    </string-array>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>

    <string name="app_name" translatable="false">Bridge Ballot</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">User name</string>
    <string name="login_password">Password</string>
    <string name="login_loginbutton">Log In</string>
    <string name="login_createuser">Create account</string>

    <string name="createuser_title">Create an account</string>
    <string name="createuser_name">Username</string>
    <string name="createuser_password">Password</string>
    <string name="createuser_confirmpassword">Confirm password</string>
    <string name="createuser_button">Create account</string>

    <string name="deleteuser_button">Delete user</string>
    <string name="deleteuser_title">Delete an user</string>

    <string name="bridgeadmin_name">Name</string>
    <string name="bridgeadmin_location">Location</string>
    <string name="bridgeadmin_latitude" translatable="false">Latitude</string>
    <string name="bridgeadmin_longitude" translatable="false">Longitude</string>
    <string name="bridgeadmin_save">Save</string>
    <string name="bridgeadmin_delete">Delete</string>

    <string name="bridge_search">Search</string>

    <string name="detail_status" translatable="false">Status:</string>
    <string name="detail_distance">Distance:</string>
    <string name="detail_location">City:</string>
    <string name="detail_bridgebutton">Bridge open</string>
    <string name="detail_share" translatable="false">G+ Share</string>
    <string name="about_names">Made by:\nJesse van Breda\nJohnnie Ho\nKevin te Hennepe\nLars van Hilten\nRicardo van der Spek</string>

    <string name="title_activity_create_user" translatable="false">Create User</string>
    <string name="title_activity_delete_user" translatable="false">Delete User</string>
    <string name="title_activity_bridge_list" translatable="false">BridgeList</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_menu" translatable="false">MenuActivity</string>
    <string name="title_activity_ballot_settings" translatable="false">BallotSettings</string>
    <string name="title_fragment_watch_list" translatable="false">WatchList</string>

    <string name="ballotlist_distance">Distance: </string>

    <string name="alert_error" translatable="false">Error</string>
    <string name="alert_ok" translatable="false">Ok</string>
    <string name="alert_distanceerror">You need to be within 500m</string>
    <string name="alert_emptyfields">Please fill out both fields.</string>

    <string name="status_open" translatable="false">Open</string>
    <string name="status_closed">Closed</string>

    <string name="bridgeadmin_newbridge">New Bridge</string>
    <string name="bridgeadmin_savenew">Save new</string>
    <string name="menu_logout">Logout</string>
    <string name="alert_success">Success</string>
    <string name="alert_failure">Failure</string>
    <string name="alert_accountsucces">Your account has been made. Please log in to use the app.</string>
    <string name="alert_accountfailure">This account already exist. Please  try another.</string>
    <string name="alert_deletesuccess">User has been succesfully deleted.</string>
    <string name="alert_deletefailure">Something went wrong, please try again later.</string>
    <string name="alert_message">Your password and confirmed password do not match.</string>
    <string name="alert_wrong_credentials">You have entered an incorrect username and/or password. Please try again.</string>
    <string name="alert_bridge_saved">The bridge has succesfully been saved.</string>
    <string name="alert_bridge_deleted">The bridge has succesfully been deleted.</string>


</resources>
