<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/m1821360" tools:context="eu.silvenia.bridgeballot.activity.menufragment.AdminBridges">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bridgeSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/bridgeName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bridgeSpinner"
        android:layout_marginTop="25dp"
        android:hint="@string/bridgeadmin_name" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/bridgeLocation"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bridgeName"
        android:layout_marginTop="25dp"
        android:hint="@string/bridgeadmin_location" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/bridgeLatitude"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bridgeLocation"
        android:layout_marginTop="25dp"
        android:numeric="decimal"
        android:hint="@string/bridgeadmin_latitude" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/bridgeLongitude"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bridgeLatitude"
        android:layout_marginTop="25dp"
        android:numeric="decimal"
        android:hint="@string/bridgeadmin_longitude" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bridgeadmin_save"
        android:id="@+id/saveButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/bridgeLongitude"

        />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/bridgeadmin_delete"
        android:id="@+id/deleteButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/saveButton"
        android:layout_marginBottom="25dp"
        />


</RelativeLayout>
